# Vision-Based-Manipulation

./: README.txt  best.rviz
panda_moveit_config/launch/: trajectory_execution.launch.xml
panda_moveit_config/rviz/: moveit_vbm.rviz
panda_moveit_config/scripts/: move_avn_v4.20.py
panda_moveit_controller/config/: panda_control.yaml
panda_moveit_controller/launch/: main.launch
panda_simulation/launch/: obj.launch  panda_simulation.launch
pcl-algorithms/: CMakeLists.txt  package.xml
pcl-algorithms/scripts/: plane-segmentation.cpp
pcl-algorithms/src/: plane-segmentation.cpp
ycb_models_desc/: CMakeLists.txt  download_ycb_dataset.py  package.xml
ycb_models_desc/urdf/: mustard_bottle.urdf  power_drill.urdf  pudding_box.urdf  table.urdf
